# kwcc_tdz

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CUSTOM_DOMAIN_SETUP.md  KW TDZ sign on 2026 - Sheet1.csv  README.md  TDZ26 Handicap Groups.pptx  pyproject.toml  requirements-lambda.txt  ruff.toml
.github/workflows/: deploy.yml
data/: debug_events_page.html  debug_results_5291871.json  debug_results_5291901.json  debug_results_5292868.json  debug_results_5293100.json  debug_results_5295405.json  debug_results_5295433.json  event_ids.json  event_timestamps.json  riders.csv  riders.json
docs/: AWS_ARCHITECTURE.md
infrastructure/: app.py  cdk.json
infrastructure/stacks/: __init__.py  batch_discovery_stack.py  cdn_stack.py  certificate_stack.py  compute_stack.py  data_stack.py  discovery_stack.py  github_actions_stack.py
local_test/: gc.html  index.html  stage_1.html  stage_2.html  stage_3.html  stage_4.html  stage_5.html  stage_6.html
scripts/: aws_setup.py  backfill_events_from_riders.py  fetch_zwiftpower.py  run_local.py  test_fetch_stage1.py
src/config/: __init__.py  loader.py  settings.py  tour_config.py  tour_manager.py
src/discovery/: __init__.py  batch_processor.py  checkpoint.py  results_fetcher.py  staging.py
src/fetcher/: __init__.py  client.py  events.py  exceptions.py  results.py
src/generator/: __init__.py  avatars.py  render.py
src/lambda_handlers/: __init__.py  batch_discovery.py  data_fetcher.py  processor.py
src/models/: __init__.py  penalty.py  result.py  rider.py  standings.py  tour.py
tests/: conftest.py
(+32 files in other folders)
